app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.footer-link {
  @apply text-[#1E1E1E] text-opacity-80 hover:underline hover:underline-offset-2 active:text-opacity-100;
}
.link {
  @apply text-blue-500 underline underline-offset-2 hover:text-blue-600 active:text-blue-700;
}
h1,
h2,
h3,
h4 {
  scroll-margin-top: 84px;
}
.content > h2 {
  @apply text-[#1E1E1E];
  color: #1e1e1e;
  font-weight: 700;
  font-size: 32px;
  margin-top: 20px;
  margin-bottom: 8px;
}

.content > h3 {
  @apply text-[#1E1E1E];
  color: #1e1e1e;
  font-weight: 700;
  font-size: 20px;
  margin-top: 16px;
}

.content > h4 {
  @apply text-6-6;
  font-weight: 700;
  font-size: 16px;
  margin-top: 16px;
}

.content > p {
  @apply text-[#1E1E1E];
}

.content > small {
  @apply text-4-6;
  font-size: 16px;
}

